test/syntax/wrong/unused2.kk.out
test/syntax/wrong/unused2.kk(2, 9): error: invalid syntax
 unexpected identifier "print"
 expecting ".", "(", "[", "{", "fn", "fun", operator, ":=", ";", "return" or "}"