test/syntax/wrong/unused2.kk
fun main() {
  2 + 3 print("hi")
}